fixes alignment and margin

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ nav .vector {
   grid-column: 1/2;
   grid-row: 1/2;
   margin-bottom: 130px;
+  border-radius: 16px;
 }
 
 .snap_img {
@@ -230,6 +231,7 @@ h3 {
   grid-column: 1/2;
   grid-row: 2/3;
   margin-bottom: 88px;
+  border-radius: 16px;
 }
 
 .card_content2 {
@@ -295,6 +297,7 @@ h3 {
   grid-column: 1/2;
   grid-row: 3/4;
   margin-bottom: 88px;
+  border-radius: 16px;
 }
 
 .card_content3 {
@@ -360,6 +363,7 @@ h3 {
   grid-column: 1/2;
   grid-row: 4/4;
   margin-bottom: 88px;
+  border-radius: 16px;
 }
 
 .card_content4 {
@@ -426,6 +430,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   margin-top: 0;
+  border-radius: 0 24px 0 0;
 }
 
 .about_container h2 {
@@ -507,7 +512,8 @@ h3 {
 }
 
 .lang i {
-  margin: 20px 26px 0 64px;
+  align-self: center;
+  margin: 0 42px 0 0;
 }
 
 #javascript {
@@ -515,7 +521,7 @@ h3 {
   justify-content: flex-start;
   background-color: #f7f7f9;
   padding: 12px;
-  margin: 6px 12px 6px 12px;
+  margin: 6px 12px 6px 24px;
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   color: #253858;
@@ -532,7 +538,7 @@ h3 {
   justify-content: flex-start;
   background-color: #f7f7f9;
   padding: 12px;
-  margin: 6px 12px 6px 12px;
+  margin: 6px 12px 6px 24px;
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   color: #253858;
@@ -549,7 +555,7 @@ h3 {
   justify-content: flex-start;
   background-color: #f7f7f9;
   padding: 12px;
-  margin: 6px 12px 6px 12px;
+  margin: 6px 12px 6px 24px;
   font-family: "Poppins", sans-serif;
   font-size: 15px;
   color: #253858;
@@ -564,7 +570,6 @@ h3 {
 .frame {
   display: flex;
   justify-content: space-between;
-  margin: 0 24px 0 24px;
   border-bottom: 1px #dfe1e6 solid;
 }
 
@@ -576,7 +581,6 @@ h3 {
 .skills {
   display: flex;
   justify-content: space-between;
-  margin: 0 24px 0 24px;
   border-bottom: 1px #dfe1e6 solid;
 }
 
@@ -593,4 +597,18 @@ h3 {
 #btnget:hover {
   background-color: #396df2;
   color: #fff;
+}
+.skills p {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  color: #000;
+}
+.frame p {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  color: #000;
 }
